--- a/css/reset.css
+++ b/css/reset.css
@@ -109,7 +109,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, 
 /* Responsive images and other embedded objects
    Note: keeping IMG here will cause problems if you're using foreground images as sprites.
    If this default setting for images is causing issues, you might want to replace it with a .responsive class instead. */
-img, object, embed {max-width: 100%; height: auto;}
+img, object, embed {width: 100%; height: auto;}
 
 /* we use a lot of ULs that aren't bulleted.
 	don't forget to restore the bullets within content. */
@@ -299,7 +299,7 @@ optgroup {font-weight: bold; }
 input, select {vertical-align: middle;}
 
 input[type="radio"] {vertical-align: text-bottom;}
-input[type="checkbox"] {vertical-align: bottom;}
+/*input[type="checkbox"] {vertical-align: bottom;}*/
 .ie7 input[type="checkbox"] {vertical-align: baseline;}
 .ie6 input {vertical-align: text-bottom;}
 
