--- a/sass/Project/_Header.scss
+++ b/sass/Project/_Header.scss
@@ -2,6 +2,10 @@
 	@include wh(100%, 10px);
 	@include bg(#000);
 }
+
+/*========================================================================*\
+		>>	global_hd  quick_bar  logo
+\*========================================================================*/
 header {
 	&.global_hd {
 		@include wh(100%, 90px);
@@ -21,7 +25,7 @@ header {
 		}
 	}// header.quick_bar  END
 	&#logo {
-		@include wh(logo, png);
+		// @include wh(logo, png);
 		position: absolute;
 		top: 0;
 		// right: 0;
@@ -57,7 +61,7 @@ header {
 									   (item5, -358px, -51px),
 									   (item6, -485px, -51px) {
 			&.#{$navItem}:hover .main_nav-icon {
-				@include bg('navIcon.png', $x, $y);
+				// @include bg('navIcon.png', $x, $y);
 			}
 		}
 	}// .main_nav-item  END
@@ -73,7 +77,7 @@ header {
 									  (item6, 53px, -485px, 0) {
 			.#{$navItem} & {
 				width: #{$w};
-				@include bg('navIcon.png', $x, $y);
+				// @include bg('navIcon.png', $x, $y);
 			}
 		}
 	}// .main_nav-icon  END
@@ -102,7 +106,7 @@ header {
 		display: block;
 		.icon {
 			@include wh(60px, 12px);
-			@include bg('fbLogo.png');
+			// @include bg('fbLogo.png');
 			background-size: cover;
 			display: inline-block;
 		}
